# support-panel

./: Cargo.toml  Makefile  README.md  build.rs  justfile
data/: org.pop.support.policy  pop_support.h  resources.gresource.xml
debian/: changelog  control  copyright  libpop-support-panel-dev.install  libpop-support-panel.install  rules
ffi/: Cargo.toml  build.rs
ffi/src/: lib.rs
i18n/cs/: pop_support.ftl
i18n/da/: pop_support.ftl
i18n/en/: pop_support.ftl
i18n/es/: pop_support.ftl
i18n/pl/: pop_support.ftl
i18n/pt-BR/: pop_support.ftl
i18n/ru/: pop_support.ftl
i18n/tr/: pop_support.ftl
i18n/zh-CN/: pop_support.ftl
src/: gresource.rs  lib.rs  logs.rs  main.rs  support_info.rs  system76.rs  vendor.rs
src/widgets/: clamp.rs  info_box.rs  info_label.rs  log_dialog.rs  mod.rs
tools/src/: pkgconfig.rs
