[package]
name = "pop-support"
version = "1.0.0"
edition = "2018"
repository = "https://github.com/pop-os/support-panel"
license = "MPL-2.0"

[workspace]
members = [ "ffi", "tools" ]

[dependencies]
anyhow = "1.0.52"
as-result = "0.2.1"
async-fs = "1.5.0"
async-process = "1.3.0"
cascade = "1.0.0"
futures = "0.3.19"
gdk-pixbuf = "0.14"
gio = "0.14"
glib = "0.14"
gtk = "0.14"
i18n-embed = { version = "0.13.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.1"
relm = "0.22.0"
relm-derive = "0.22.0"
tempfile = "3.3.0"
once_cell = "1.9.0"
rust-embed = "6.3.0"

[dependencies.clap]
version = "3.0.10"
features = ["derive"]
